<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ui.DetailsActivity">
    <EditText
        android:id="@+id/task_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task"
        android:textSize="20sp"
        style="@style/TextAppearance.AppCompat.Headline"/>
    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textSize="16sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:padding="8dp"/>
        <RadioButton
            android:id="@+id/priority_high_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/high"/>
        <RadioButton
            android:id="@+id/priority_avg_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_weight="1"
            android:text="@string/average"/>
        <RadioButton
            android:id="@+id/priority_low_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_weight="1"
            android:text="@string/low"/>
    </RadioGroup>

    <TimePicker
        android:id="@+id/task_time_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>